--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
-upload_port = "cup.local"
+;upload_port = "cup.local"
 
 lib_deps = 
 	Wire
